main and footer section commit

--- a/index.html
+++ b/index.html
@@ -64,13 +64,46 @@
     <!--header section start-->
     <!--main section start-->
     <main>
-
+      <section>
+        <div class="wrapper">
+          <h3>set your priorities</h3>
+          <ul class="cardElem">
+            <li>
+              <h4>high</h4>
+            </li>
+            <li>
+              <h4>medium</h4>
+            </li>
+            <li>
+              <h4>low</h4>
+            </li>
+          </ul>
+          <ul class="btnElem">
+            <li>
+              <button>task 2</button>
+            </li>
+            <li>
+              <button>task 3</button>
+            </li>
+            <li>
+              <button>task 4</button>
+            </li>
+            <li>
+              <button>task 5</button>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <!--main section end-->
 
     <!--footer section start-->
-    <footer>      
-
+    <footer>     
+      <div class="wrapper">
+        <div>
+          <a href="index.html" title="logo">logo</a>
+        </div>
+      </div> 
     </footer>
     <!--footer section end-->
 
