--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <title>Drag Drop</title>
   
   <!-- 120 word description for SEO purposes goes here. Note: Usage of lang tag. -->
-  <!-- <meta name="description" lang="en" content=""> -->
+  <meta name="description" lang="en" content="Tasks">
   
   <!-- Keywords to help with SEO go here. Note: Usage of lang tag.  -->
-  <!-- <meta name="keywords" lang="en" content=""> -->
+  <meta name="keywords" lang="en" content="Logo, High, medium">
   
   <!-- View-port Basics: http://mzl.la/VYREaP -->
   <!-- This meta tag is used for mobile device to display the page without any zooming,
@@ -110,7 +110,7 @@
   </div>
   <!--container end-->
 
-<!-- <script src="js/vendors/jquery-1.8.3.min.js"></script>
-<script src="js/script.js"></script> -->
+<!-- <script src="js/vendors/jquery-1.8.3.min.js"></script> -->
+<script src="assets/js/script.js"></script>
 </body>
 </html>
