--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </h1>
         <div class="header-text">
           <div>
-            <a href="#fixme" title="Start">start</a>
+            <a href="#fixme" title="Start" class="start">start</a>
           </div>
           <div>
             <a href="#fixme" title="Restart">restart</a>
