class added to button element

--- a/index.html
+++ b/index.html
@@ -80,16 +80,16 @@
           </ul>
           <ul class="btnElem">
             <li>
-              <button>task 2</button>
+              <button class="item" draggable="true">task 2</button>
             </li>
             <li>
-              <button>task 3</button>
+              <button class="item" draggable="true">task 3</button>
             </li>
             <li>
-              <button>task 4</button>
+              <button class="item" draggable="true">task 4</button>
             </li>
             <li>
-              <button>task 5</button>
+              <button class="item" draggable="true">task 5</button>
             </li>
           </ul>
         </div>
