restart class added

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <a href="#fixme" title="Start" class="start">start</a>
           </div>
           <div>
-            <a href="#fixme" title="Restart">restart</a>
+            <a href="#fixme" title="Restart" class="restart">restart</a>
           </div>
         </div>
       </div>
