--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
         <div class="wrapper">
           <h3>set your priorities</h3>
           <ul class="cardElem">
-            <li>
+            <li class="dropElem">
               <h4>high</h4>
             </li>
-            <li>
+            <li class="dropElem">
               <h4>medium</h4>
             </li>
-            <li>
+            <li class="dropElem">
               <h4>low</h4>
             </li>
           </ul>
